--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-gray-950 text-gray-100 font-sans antialiased overflow-hidden">
     <div id="root"></div>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
