--- a/index.html
+++ b/index.html
@@ -1,119 +1,129 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eSheep · Dreaming Electric Sheep</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              gray: {
-                950: '#030712',
-              }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>eSheep · Dreaming Electric Sheep</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            gray: {
+              950: '#030712',
             }
           }
         }
       }
-    </script>
-    <style>
-      :root {
-        --bg-base: #0f0f0f;
-        --bg-panel: #0f0f0f;
-        --bg-elevated: #121212;
-        --bg-overlay: #151515;
-        --bg-muted: #1b1b1b;
-        --border-subtle: #1f2937;
-        --border-strong: #263244;
-        --text-primary: #f8fafc;
-        --text-secondary: #9ca3af;
-        --accent-green: #10b981;
-        --accent-blue: #0ea5e9;
-        --radius-sm: 8px;
-        --radius-md: 12px;
-        --radius-lg: 16px;
-        --shadow-soft: 0 12px 30px rgba(0, 0, 0, 0.35);
-        --shadow-strong: 0 20px 60px rgba(0, 0, 0, 0.5);
-        --dot-weak: rgba(255, 255, 255, 0.04);
-        --dot-strong: rgba(255, 255, 255, 0.06);
-      }
+    }
+  </script>
+  <style>
+    :root {
+      --bg-base: #0f0f0f;
+      --bg-panel: #0f0f0f;
+      --bg-panel-rgb: 15, 15, 15;
+      --bg-elevated: #121212;
+      --bg-elevated-rgb: 18, 18, 18;
+      --bg-overlay: #151515;
+      --bg-muted: #1b1b1b;
+      --border-subtle: #1f2937;
+      --border-strong: #263244;
+      --text-primary: #f8fafc;
+      --text-secondary: #9ca3af;
+      --accent-green: #10b981;
+      --accent-blue: #0ea5e9;
+      --radius-sm: 8px;
+      --radius-md: 12px;
+      --radius-lg: 16px;
+      --shadow-soft: 0 12px 30px rgba(0, 0, 0, 0.35);
+      --shadow-strong: 0 20px 60px rgba(0, 0, 0, 0.5);
+      --dot-weak: rgba(255, 255, 255, 0.04);
+      --dot-strong: rgba(255, 255, 255, 0.06);
+    }
 
-      :root.theme-dark,
-      body.theme-dark {
-        --bg-base: #0f0f0f;
-        --bg-panel: #0f0f0f;
-        --bg-elevated: #121212;
-        --bg-overlay: #151515;
-        --bg-muted: #1b1b1b;
-        --border-subtle: #1f2937;
-        --border-strong: #263244;
-        --text-primary: #f8fafc;
-        --text-secondary: #9ca3af;
-        --accent-green: #10b981;
-        --accent-blue: #0ea5e9;
-        --shadow-soft: 0 12px 30px rgba(0, 0, 0, 0.35);
-        --shadow-strong: 0 20px 60px rgba(0, 0, 0, 0.5);
-        --dot-weak: rgba(255, 255, 255, 0.04);
-        --dot-strong: rgba(255, 255, 255, 0.06);
-      }
+    :root.theme-dark,
+    body.theme-dark {
+      --bg-base: #0f0f0f;
+      --bg-panel: #0f0f0f;
+      --bg-panel-rgb: 15, 15, 15;
+      --bg-elevated: #121212;
+      --bg-elevated-rgb: 18, 18, 18;
+      --bg-overlay: #151515;
+      --bg-muted: #1b1b1b;
+      --border-subtle: #1f2937;
+      --border-strong: #263244;
+      --text-primary: #f8fafc;
+      --text-secondary: #9ca3af;
+      --accent-green: #10b981;
+      --accent-blue: #0ea5e9;
+      --shadow-soft: 0 12px 30px rgba(0, 0, 0, 0.35);
+      --shadow-strong: 0 20px 60px rgba(0, 0, 0, 0.5);
+      --dot-weak: rgba(255, 255, 255, 0.04);
+      --dot-strong: rgba(255, 255, 255, 0.06);
+    }
 
-      :root.theme-light,
-      body.theme-light {
-        --bg-base: #ffffff;
-        --bg-panel: #ffffff;
-        --bg-elevated: #ffffff;
-        --bg-overlay: #f8fafc;
-        --bg-muted: #eef2f6;
-        --border-subtle: #e5e7eb;
-        --border-strong: #cbd5e1;
-        --text-primary: #0f172a;
-        --text-secondary: #475569;
-        --accent-green: #10b981;
-        --accent-blue: #0ea5e9;
-        --shadow-soft: 0 12px 30px rgba(15, 23, 42, 0.12);
-        --shadow-strong: 0 20px 60px rgba(15, 23, 42, 0.16);
-        --dot-weak: rgba(15, 23, 42, 0.04);
-        --dot-strong: rgba(15, 23, 42, 0.08);
-      }
+    :root.theme-light,
+    body.theme-light {
+      --bg-base: #ffffff;
+      --bg-panel: #ffffff;
+      --bg-panel-rgb: 255, 255, 255;
+      --bg-elevated: #ffffff;
+      --bg-elevated-rgb: 255, 255, 255;
+      --bg-overlay: #f8fafc;
+      --bg-muted: #eef2f6;
+      --border-subtle: #e5e7eb;
+      --border-strong: #cbd5e1;
+      --text-primary: #0f172a;
+      --text-secondary: #475569;
+      --accent-green: #10b981;
+      --accent-blue: #0ea5e9;
+      --shadow-soft: 0 12px 30px rgba(15, 23, 42, 0.12);
+      --shadow-strong: 0 20px 60px rgba(15, 23, 42, 0.16);
+      --dot-weak: rgba(15, 23, 42, 0.04);
+      --dot-strong: rgba(15, 23, 42, 0.08);
+    }
 
-      body {
-        background: var(--bg-panel);
-        color: var(--text-primary);
-      }
+    body {
+      background: var(--bg-panel);
+      color: var(--text-primary);
+    }
 
-      .bg-dot-grid {
-        background-color: var(--bg-panel);
-        background-image:
-          radial-gradient(circle at 1px 1px, var(--dot-strong) 1px, transparent 0),
-          radial-gradient(circle at 1px 1px, var(--dot-weak) 1px, transparent 0);
-        background-size: 28px 28px;
-        background-position: 0 0, 14px 14px;
-      }
+    .bg-dot-grid {
+      background-color: var(--bg-panel);
+      background-image:
+        radial-gradient(circle at 1px 1px, var(--dot-strong) 1px, transparent 0),
+        radial-gradient(circle at 1px 1px, var(--dot-weak) 1px, transparent 0);
+      background-size: 28px 28px;
+      background-position: 0 0, 14px 14px;
+    }
 
-      /* Custom scrollbar for better aesthetics in split views */
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #9ca3af; 
-        border-radius: 4px;
-      }
-      .dark ::-webkit-scrollbar-thumb {
-        background: #4b5563;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #6b7280; 
-      }
-    </style>
-<script type="importmap">
+    /* Custom scrollbar for better aesthetics in split views */
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #9ca3af;
+      border-radius: 4px;
+    }
+
+    .dark ::-webkit-scrollbar-thumb {
+      background: #4b5563;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #6b7280;
+    }
+  </style>
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
@@ -134,8 +144,10 @@
 }
 </script>
 </head>
-  <body class="font-sans antialiased overflow-hidden">
-    <div id="root"></div>
+
+<body class="font-sans antialiased overflow-hidden">
+  <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
